2004-01-27  Joseph S. Myers  <jsm@polyomino.org.uk>

	* fortune/fortune/fortune.6.in: Update substitution for path to
	fortunes directory.

	* cribbage/crib.c, cribbage/cribbage.h, cribbage/io.c,
	dab/Makefile.bsd, monop/misc.c, monop/monop.def, monop/monop.ext:
	Update from NetBSD CVS.

2004-01-26  Joseph S. Myers  <jsm@polyomino.org.uk>

	* sail/main.c: Reorder includes to match NetBSD.

	* cribbage/cribbage.h, cribbage/crib.c, cribbage/io.c: Rename
	receive_int to receive_intr.

	* hack/hack.pri.c: Fix typo in merge from NetBSD.

	* configure: Consistently use balanced parentheses in case
	statements.

2004-01-25  Joseph S. Myers  <jsm@polyomino.org.uk>

	* monop/misc.c, monop/monop.def, monop/monop.ext: Rename yn to
	yncoms.

	* cribbage/cribbage.h, cribbage/crib.c, cribbage/io.c: Rename rint
	to receive_int.

	* fortune/fortune/fortune.c: Add test for __CYGWIN__.
	* configure: Test for sig_t.
	* include/signal.h: Use it.
	Cygwin issues reported by David A Bagley <bagleyd@tux.org>.

2004-01-16  Joseph S. Myers  <jsm@polyomino.org.uk>

	* wtf/acronyms, wtf/acronyms.comp: Update from NetBSD CVS.

2004-01-14  Joseph S. Myers  <jsm@polyomino.org.uk>

	* wtf/acronyms, wtf/acronyms.comp: Update from NetBSD CVS.

2004-01-04  Joseph S. Myers  <jsm@polyomino.org.uk>

	* COPYING: Note that TODO no longer contains anything from the
	original bsd-games 1.3.

	* phantasia/phantasia.6, wtf/acronyms, wtf/acronyms.comp: Update
	from NetBSD CVS.

2004-01-02  Joseph S. Myers  <jsm@polyomino.org.uk>

	* atc/atc.6.in, backgammon/backgammon/main.c,
	backgammon/teachgammon/data.c, caesar/caesar.c,
	fortune/datfiles/fortunes, fortune/datfiles/fortunes2,
	fortune/fortune/fortune.c, hack/hack.options.c, phantasia/main.c,
	phantasia/misc.c, rogue/Makefile.bsd, rogue/rogue.h,
	wargames/wargames.6, worm/worm.6, wtf/acronyms: Update from NetBSD
	CVS.
	* dab: New directory from NetBSD CVS.
	* COPYING, INSTALL, README, bsd-games.lsm, Makeconfig.in,
	configure, exec.libs, exec.objs: Update.